# call-analytics-system

./: .gitignore  Jenkinsfile  README.md  build.xml  pom.xml  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs-pages.yml
config/: app.toml  fields.toml  models.toml  rules.toml  vectorstore.toml
docs/: ai-coding.md  analysis.md  clean-code.md  conf.py  continous-delivery.md  ddd.md  dsl.md  functional.md  git-journal.md  ide.md  index.md  metrics.md  refactoring.md  requirements.md  uml.md  unit-tests.md
docs/_static/: custom.css
scripts/: __init__.py  download_models.py  launch_ui.py  rebuild_index.py  setup_environment.py
src/: __init__.py  cli.py
src/analysis/: __init__.py  aggregations.py  filters.py  query_interpreter.py  semantic_search.py
src/core/: __init__.py  audio_processor.py  csv_processor.py  data_schema.py  labeling_engine.py  storage_manager.py
src/ml/: __init__.py  embeddings.py  llm_interface.py  whisper_stt.py
src/ui/: __init__.py  app.py
src/ui/components/: __init__.py  charts.py  filters.py  metrics.py  tables.py
src/ui/pages/: __init__.py  analysis.py  dashboard.py  qa_interface.py  upload.py
src/utils/: __init__.py  file_handlers.py  formatters.py  logger.py  text_processing.py  validators.py
src/vectordb/: __init__.py  chroma_client.py  indexer.py  retriever.py
test-reports/: junit.xml
tests/: __init__.py  conftest.py  test_README.md  test_aggregations.py  test_analysis.py  test_core.py  test_llm_integration.py  test_ml.py  test_text_processing.py
tests/test_analysis/: __init__.py  test_aggregations.py  test_filters.py  test_query_interpreter.py  test_semantic_search.py
tests/test_core/: __init__.py  test_audio_processor.py  test_csv_processor.py  test_data_schema.py
tests/test_ml/: __init__.py  test_embeddings.py  test_whisper_stt.py
tests/test_vectordb/: __init__.py  test_chroma_client.py
tests/tools/: test_requirements_tracker.py
tools/requirements_tracker/: __init__.py  app.py  crud.py  db.py  models.py  seed.py
tools/requirements_tracker/static/: styles.css
tools/requirements_tracker/templates/: base.html  board.html
